[package]
name = "mightybadger-gotham"
description = "Honeybadger Notifier for Rust, middleware for Gotham"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"

homepage = "https://github.com/qnighy/mightybadger-rs"
repository = "https://github.com/qnighy/mightybadger-rs.git"
readme = "README.md"
keywords = ["honeybadger", "gotham"]
categories = ["web-programming", "api-bindings", "development-tools"]
license = "MIT"

[dependencies]
futures01 = "0.1.27"
hyper = { version = "0.12.7", default-features = false }
gotham = "0.4.0"
gotham_derive = "0.4.0"
mightybadger = { git = "https://github.com/qnighy/mightybadger-rs.git", rev = "fe19ce7" }

[dev-dependencies]
mime = "0.3.7"
tokio = "0.3.2"
