[package]
name = "mightybadger-gotham"
description = "Honeybadger Notifier for Rust, middleware for Gotham"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"

homepage = "https://github.com/qnighy/mightybadger-rs"
repository = "https://github.com/qnighy/mightybadger-rs.git"
readme = "README.md"
keywords = ["honeybadger", "gotham"]
categories = ["web-programming", "api-bindings", "development-tools"]
license = "MIT"

[dependencies]
pin-project = "1.0.1"
http = "0.2.1"
gotham = "0.5.0"
gotham_derive = "0.5.0"
mightybadger = { git = "https://github.com/qnighy/mightybadger-rs.git", rev = "98a67e7" }

[dev-dependencies]
mime = "0.3.15"
tokio = { version = "0.3.6", default-features = false, features = ["time"] }
hyper = { version = "0.13.9", default-features = false }
